# awesome-localdb

./: .gitignore  .gitleaks.toml  .pre-commit-config.yaml  AI_CONTRIBUTING.md  CLAUDE.md  CONTRIBUTING.md  README.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  new_database.md
.github/workflows/: deploy.yml  staleness-check.yml  test-examples.yml  update-stars.yml  validate.yml
databases/acebase/: README.md  metadata.json
databases/arcadedb/: README.md  metadata.json
databases/bbolt/: README.md  metadata.json
databases/bleve/: README.md  metadata.json
databases/buntdb/: README.md  metadata.json
databases/chdb/: README.md  metadata.json
databases/chromadb/: README.md  metadata.json
databases/cogdb/: README.md  metadata.json
databases/cozodb/: README.md  metadata.json
databases/duckdb/: README.md  metadata.json
databases/duckdb/python/: pyproject.toml
databases/duckdb/python/src/: recipe_analytical_query.py  recipe_data_pipeline.py
databases/duckdb/python/tests/: test_analytical_query.py  test_data_pipeline.py
databases/ejdb2/: README.md  metadata.json
databases/ejdb2/python/: pyproject.toml
databases/ejdb2/python/src/: recipe_document_store.py  recipe_json_queries.py
databases/ejdb2/python/tests/: test_document_store.py  test_json_queries.py
databases/falkordblite/: README.md  metadata.json
databases/falkordblite/python/: pyproject.toml
databases/falkordblite/python/src/: recipe_graph_cypher.py
databases/falkordblite/python/tests/: test_graph_cypher.py
databases/fjall/: README.md  metadata.json
databases/h2/: README.md  metadata.json
databases/kuzu/: README.md  metadata.json
databases/lancedb/: README.md  metadata.json
databases/lancedb/python/: pyproject.toml
databases/lancedb/python/src/: recipe_multimodal_storage.py  recipe_vector_search.py
databases/lancedb/python/tests/: test_multimodal_storage.py  test_vector_search.py
databases/leveldb/: README.md  metadata.json
databases/libsql/: README.md  metadata.json
databases/libsql/python/: pyproject.toml
databases/libsql/python/src/: recipe_sql_queries.py  recipe_vector_search.py
databases/libsql/python/tests/: test_sql_queries.py  test_vector_search.py
databases/limbo/: README.md  metadata.json
databases/litedb/: README.md  metadata.json
databases/lmdb/: README.md  metadata.json
databases/lokijs/: README.md  metadata.json
databases/lowdb/: README.md  metadata.json
databases/milvus-lite/: README.md  metadata.json
databases/milvus-lite/python/: pyproject.toml
databases/milvus-lite/python/src/: recipe_collections.py  recipe_vector_search.py
databases/milvus-lite/python/tests/: test_collections.py  test_vector_search.py
databases/nanots/: README.md  metadata.json
databases/native-db/: README.md  (+1 more)
databases/qdrant-local/python/: pyproject.toml
databases/qdrant-local/python/src/: recipe_collections.py  recipe_vector_search.py
databases/qdrant-local/python/tests/: test_collections.py  test_vector_search.py
databases/slatedb/python/: pyproject.toml
databases/slatedb/python/src/: recipe_kv_store.py
databases/slatedb/python/tests/: test_kv_store.py
databases/surrealdb/rust/: Cargo.toml
databases/surrealdb/rust/tests/: integration_test.rs
schemas/: index.schema.json  metadata.schema.json
scripts/: build-index.sh  check-staleness.py  update-stars.py  validate-metadata.py
site/: decision-tree.json  index.html  objectbox-model.json
templates/: DATABASE_README.md  RECIPE_PYTHON.md  RECIPE_RUST.md
(+204 files in other folders)
