[project]
name = "awesome-localdb-duckdb-python"
version = "0.1.0"
description = "Recipe examples for DuckDB"
requires-python = ">=3.9"
dependencies = [
    "duckdb>=1.2.0",
    "pandas>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
