[package]
name = "awesome-localdb-surrealdb-rust"
version = "0.1.0"
edition = "2021"
description = "Recipe examples for SurrealDB"

[dependencies]
surrealdb = { version = "2", features = ["kv-mem"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }

[dev-dependencies]
